--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -1,4 +1,7 @@
 .navbar {
+    position: fixed;
+    top: 0;
+    width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
